grammar.js
        translation_unit: $ => optional(repeat1(
            $.external_declaration,
        )),

        /*
         * external_declaration :
         *   function_definition
         *   declaration
         *   SEMICOLON
         */
        preprocessor_define: $ => seq(
            preprocessor(PREPROC.DEFINE),
            commaSeparated(field('name', $.identifier)),
            optional(field('value', repeat1($.token_string))),
            NEW_LINE,
        ),
        preprocessor_undefine: $ => seq(
            preprocessor(PREPROC.UNDEF),
            field('name', $.identifier),
            NEW_LINE,
        ),
        preprocessor_if: $ => seq(
            preprocessor(PREPROC.IF),
            field('condition', $._preprocessor_expression),
            NEW_LINE,
        ),
        preprocessor_ifdef: $ => seq(
            preprocessor(PREPROC.IFDEF),
            field('name', $.identifier),
            NEW_LINE,
        ),
        preprocessor_ifndef: $ => seq(
            preprocessor(PREPROC.IFNDEF),
            field('name', $.identifier),
            NEW_LINE,
        ),
        preprocessor_else: $ => seq(
            preprocessor(PREPROC.ELSE),
            NEW_LINE,
        ),
        preprocessor_elif: $ => seq(
            preprocessor(PREPROC.ELIF),
            field('condition', $._preprocessor_expression),
            NEW_LINE,
        ),
        preprocessor_endif: $ => seq(
            preprocessor(PREPROC.ENDIF),
            NEW_LINE,
        ),
        preprocessor_error: $ => seq(
            preprocessor(PREPROC.ERROR),
            repeat1($.token_string),
            NEW_LINE,
        ),
        preprocessor_pragma: $ => seq(
            preprocessor(PREPROC.PRAGMA),
            repeat1($.token_string),
            NEW_LINE,
        ),
        preprocessor_extension: $ => seq(
            preprocessor(PREPROC.EXTENSION),
            field('extension', $.token_string),
            ':',
            field('behavior', $.token_string),
            NEW_LINE,
        ),
        preprocessor_version: $ => seq(
            preprocessor(PREPROC.VERSION),
            $.integer_constant,
            optional($.token_string),
            NEW_LINE,
        ),
        preprocessor_line: $ => seq(
            preprocessor(PREPROC.LINE),
            $.integer_constant,
            optional($.token_string),
            NEW_LINE,
        ),

        token_string: $ => /\S+/,

        _preprocessor_expression: $ => choice(
            $.identifier,
            $.integer_constant,
            $.bool_constant,
            $.float_constant,
            alias(
                $.preprocessor_parenthesised_expression,
                $.parenthesised_expression,
            ),
            alias(
                $.preprocessor_unary_expression,
                $.unary_expression,
            ),
            alias(
                $.preprocessor_multiplicative_expression,
                $.multiplicative_expression,
            ),
            alias(
                $.preprocessor_additive_expression,
                $.additive_expression
            ),
            alias(
                $.preprocessor_shift_expression,
                $.shift_expression,
            ),
            alias(
                $.preprocessor_relational_expression,
                $.relational_expression,
            ),
            alias(
                $.preprocessor_equality_expression,
                $.equality_expression,
            ),
            alias(
                $.preprocessor_and_expression,
                $.and_expression,
            ),
            alias(
                $.preprocessor_exclusive_or_expression,
                $.exclusive_or_expression,
            ),
            alias(
                $.preprocessor_inclusive_or_expression,
                $.inclusive_or_expression,
            ),
            alias(
                $.preprocessor_logical_and_expression,
                $.logical_and_expression,
            ),
            alias(
                $.preprocessor_logical_or_expression,
                $.logical_or_expression,
            ),
        ),

        _expression: $ => choice(
            $.primary_expression,
            $.function_call_expression,
            $.array_subscript_expression,
            $.field_select_expression,
            $.postfix_expression,
            $.prefix_expression,
            $.unary_expression,
            $.multiplicative_expression,
            $.additive_expression,
            $.shift_expression,
            $.relational_expression,
            $.equality_expression,
            $.and_expression,
            $.exclusive_or_expression,
            $.inclusive_or_expression,
            $.logical_and_expression,
            $.logical_xor_expression,
            $.logical_or_expression,
            $.conditional_expression,
            $.assignment_expression,
            $.sequence_expression,
        ),

        relational_expression: $ => Expression.relational($, $._expression),
        identifier: $ => choice(
            /[a-zA-Z_][a-zA-Z0-9_]*/,
            /[a-zA-Z_][a-zA-Z0-9_]*\\(\r|\n|\r\n)[a-zA-Z0-9_]+/,
        ),

        integer_constant: $ => choice(
            $.decimal_constant,
            $.octal_constant,
            $.hexadecimal_constant,
        ),
        decimal_constant: () => /[1-9][0-9]*[uU]?/,
