test/corpus/preprocessor.txt
================================================================================
Preprocessor - define
================================================================================

#define var1, var2, var3
#define var4 0.0
#define var5 defined __LINE__
#define var6 9.0e-12 * 1000.0
#define var7 var4[0]

--------------------------------------------------------------------------------

(translation_unit
  (preprocessor_define
    name: (identifier)
    name: (identifier)
    name: (identifier))
  (preprocessor_define
    name: (identifier)
    value: (token_string))
  (preprocessor_define
    name: (identifier)
    value: (token_string)
    value: (token_string))
  (preprocessor_define
    name: (identifier)
    value: (token_string)
    value: (token_string)
    value: (token_string))
  (preprocessor_define
    name: (identifier)
    value: (token_string)))

================================================================================
Preprocessor - undefine
================================================================================

#undef var1

--------------------------------------------------------------------------------

(translation_unit
  (preprocessor_undefine
    name: (identifier)))

================================================================================
Preprocessor - if
================================================================================

#if DLEVEL > 5

--------------------------------------------------------------------------------

(translation_unit
  (preprocessor_if
    condition: (relational_expression
      (identifier)
      (integer_constant
        (decimal_constant)))))

================================================================================
Preprocessor - ifdef
================================================================================

#ifdef DLEVEL

--------------------------------------------------------------------------------

(translation_unit
  (preprocessor_ifdef
    name: (identifier)))

================================================================================
Preprocessor - ifndef
================================================================================

#ifndef DLEVEL

--------------------------------------------------------------------------------

(translation_unit
  (preprocessor_ifndef
    (identifier)))

================================================================================
Preprocessor - else
================================================================================

#else

--------------------------------------------------------------------------------

(translation_unit
  (preprocessor_else))

================================================================================
Preprocessor - elif
================================================================================

#elif VERSION > 400

--------------------------------------------------------------------------------

(translation_unit
  (preprocessor_elif
    condition: (relational_expression
      (identifier)
      (integer_constant
        (decimal_constant)))))

================================================================================
Preprocessor - endif
================================================================================

#endif

--------------------------------------------------------------------------------

(translation_unit
  (preprocessor_endif))

================================================================================
Preprocessor - error
================================================================================

#error Not Supported

--------------------------------------------------------------------------------

(translation_unit
  (preprocessor_error
    (token_string)
    (token_string)))

================================================================================
Preprocessor - pragma
================================================================================

#pragma vertex

--------------------------------------------------------------------------------

(translation_unit
  (preprocessor_pragma
    (token_string)))

================================================================================
Preprocessor - extension
================================================================================

#extension all : enable

--------------------------------------------------------------------------------

(translation_unit
  (preprocessor_extension
    extension: (token_string)
    behavior: (token_string)))

================================================================================
Preprocessor - version
================================================================================

#version 460

--------------------------------------------------------------------------------

(translation_unit
  (preprocessor_version
    (integer_constant
      (decimal_constant))))

================================================================================
Preprocessor - line
================================================================================

#line 100 shader.vert

--------------------------------------------------------------------------------

(translation_unit
  (preprocessor_line
    (integer_constant
      (decimal_constant))
    (token_string)))
